--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,8 +2,11 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
-  background-color: antiquewhite;
-  color: brown;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: gainsboro;
+  color: rosybrown;
   text-align: center;
-  margin-top: 100px;
-}
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+};
