--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 body {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: gainsboro;
-  color: rosybrown;
+  color: rgb(19, 38, 146);
   text-align: center;
   margin-top: 50px;
   display: flex;
