Changed font to discgusting Tamagotchi like font

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import url('https://fonts.googleapis.com/css2?family=Long+Cang&family=Shadows+Into+Light&display=swap');
 
 body {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Shadows Into Light', cursive;
   background-color: gainsboro;
   color: rgb(19, 38, 146);
   text-align: center;
