--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,12 @@
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
 @import url('https://fonts.googleapis.com/css2?family=Long+Cang&family=Shadows+Into+Light&display=swap');
 
+@import "./eat.css";
+@import "./play.css";
+@import "./fight.css";
+@import "./sleep.css";
+
+
 body {
   font-family: 'Shadows Into Light', cursive;
   background-color: gainsboro;
@@ -30,27 +36,7 @@ body {
   padding-right: 250px;
   padding-left: 250px;
 }
-
-#eat {
-  background: rgb(117, 131, 173);
-  font-size: 40px;
-}
-
-#play {
-  background: slategray;
-  font-size: 40px;
-}
-
-#fight {
-  background: palegoldenrod;
-  font-size: 40px;
-}
-
-#sleep {
-  background: rgb(209, 178, 209);
-  font-size: 40px;
-}
-
+ // Changed Button Length //
 #addFood, #subtractFood, #addSuperFun, #addSlightlyFun, #runAway, #committingViolence, #napTime, #sleepTime {
   width: 50%;
 }
